# AI-OTOP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml
cmake/: depends.cmake
src/common/: attr.h  config.h  gen_random.h  generate_random.h  math.h  option.h  tensor.cc  tensor.h  types.h
src/kernel/: kernel.h
src/kernel/kernels/: kernel.h  sigmoid.h
src/kernel/native/: conv2d_fp32.h  sigmoid.cc  sigmoid.h
src/kernel/x86/: conv2d_fp32.h  math_avx512.h  math_fma.h  math_sse.h  sigmoid.cc  sigmoid_x86.cc
src/runtime/: kernel_runtime.cc  kernel_runtime.h
tests/: CMakeLists.txt  random_test.cc  runtime_native_test.cc  runtime_test.cc
tools/: CMakeLists.txt  config.yaml  diff.py  gen_random_input.cc  run.sh
